syntax = "proto3";

package pb;
// import "pb/common.proto";

service PaymentService {

}
